[package]
name = "data_inject"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
futures-util = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.13"
rustls = { version = "*", features = ["ring"] }
mimalloc = "0.1"  # <--- MAKE SURE THIS LINE IS PRESENT
bigdecimal = "0.4" # Helps convert Rust Strings to SQL NUMERIC safely
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }